# opengl_the_trials

./: .gitignore  readme.md
graphics_test/: CMakeLists.txt  WindowManager.cpp  WindowManager.h  WindowWrangler.cpp  WindowWrangler.h  glad.c  main.cpp
graphics_test.xcodeproj/: project.pbxproj
graphics_test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
